summit-2020/bookinfo/bookinfo-controller.yml
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: productpage
  namespace: bookinfo
spec:
  meshName: appmesh-workshop
  routes:
    - name: productpage-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: productpage-v1
              weight: 1

---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  meshName: appmesh-workshop
  routes:
    - name: reviews-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            #- virtualNodeName: reviews-v1
            #  weight: 1
            - virtualNodeName: reviews-v2
              weight: 1
            - virtualNodeName: reviews-v3
              weight: 1 

---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: ratings
  namespace: bookinfo
spec:
  meshName: appmesh-workshop
  routes:
    - name: ratings-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: ratings-v1
              weight: 1
            
---
apiVersion: appmesh.k8s.aws/v1beta1
kind: VirtualService
metadata:
  name: details
  namespace: bookinfo
spec:
  meshName: appmesh-workshop
  routes:
    - name: details-route
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: details-v1
              weight: 1
